// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> layout renders Counter 1`] = `
<div
  className="mfui-counter"
>
  <button
    className="mfui-counter__btn mfui-counter__btn_left"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-counter__icon"
    />
  </button>
  <div
    className="mfui-counter__input-box"
  >
    <input
      className="mfui-counter__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      value={0}
    />
  </div>
  <button
    className="mfui-counter__btn mfui-counter__btn_right"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-counter__icon"
    />
  </button>
</div>
`;

exports[`<Counter /> layout renders Counter with "isControlled" props 1`] = `
<div
  className="mfui-counter mfui-counter_disabled class-name root-class"
>
  <button
    className="mfui-counter__btn mfui-counter__btn_left button-minus-class"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-counter__icon"
    />
  </button>
  <div
    className="mfui-counter__input-box"
  >
    <input
      className="mfui-counter__input input-class"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      value={15}
    />
  </div>
  <button
    className="mfui-counter__btn mfui-counter__btn_right button-plus-class"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-counter__icon"
    />
  </button>
</div>
`;

exports[`<Counter /> layout renders Counter with props 1`] = `
<div
  className="mfui-counter mfui-counter_disabled class-name root-class"
>
  <button
    className="mfui-counter__btn mfui-counter__btn_left button-minus-class"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-counter__icon"
    />
  </button>
  <div
    className="mfui-counter__input-box"
  >
    <input
      className="mfui-counter__input input-class"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      value={10}
    />
  </div>
  <button
    className="mfui-counter__btn mfui-counter__btn_right button-plus-class"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <test-file-stub
      className="mfui-counter__icon"
    />
  </button>
</div>
`;
